--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 version: "3.9"
 
 services:
+  postgres:
+    image: postgres:16
+    container_name: postgres-db
+    restart: always
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: banking_db
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - policy-net
   opa:
     build:
       context: ./opa
@@ -18,6 +32,9 @@ services:
       - "8080:8080"
     environment:
       - OPA_URL=http://opa:8181
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/banking_db
+      - SPRING_DATASOURCE_USERNAME=user
+      - SPRING_DATASOURCE_PASSWORD=password
     depends_on:
       - opa
     networks:
@@ -53,3 +70,5 @@ networks:
   policy-net:
     driver: bridge
 
+volumes:
+  postgres_data:
