--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 version: "3.9"
 
 services:
+  redis:
+    image: redis:latest
+    container_name: redis-cache
+    restart: always
+    ports:
+      - "6379:6379"
+    networks:
+      - policy-net
   postgres:
     image: postgres:16
     container_name: postgres-db
@@ -48,6 +56,9 @@ services:
       - "8081:8081"
     environment:
       - OPA_URL=http://opa:8181
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/banking_db
+      - SPRING_DATASOURCE_USERNAME=user
+      - SPRING_DATASOURCE_PASSWORD=password
     depends_on:
       - opa
     networks:
